--- a/css/style.css
+++ b/css/style.css
@@ -35,71 +35,122 @@ img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
-
 .wrapper_container {
 	margin: 0 auto;
 	width: 1280px;
 }
 
-.header_social {
-	background-color: green;
-	width: 1280px;
-	height: 45px;
-}
-.header_social img {
-	float: right;
-	padding-right: 150px;
-	padding-top: 10px;
-	margin: 0px -70px;
-}
-.header_social span {
-	float: left;
-	color: white;
-	font-size: 18px;
-	padding-left: 150px;
-	padding-top: 10px;
-}
-
-.header_content {
-	background: whitesmoke;
-}
-
-.header_contact {
-	padding-top: 12px;
-	color: green;
-	font-size: 20px;	
-}
-
-.logo1 {
-		padding-top: 13.3px;
-		float: left;
-		padding-left: 150px;
-}
-
-.logo2 {
-		padding-top: 24px;
+	.header_social {
+		background-color: #37a14c;
+		width: 1280px;
+		height: 45px;
+	}
+	.header_social img {
 		float: right;
 		padding-right: 150px;
+		padding-top: 10px;
+		margin: 0px -70px;
+	}
+	.header_social span {
+		float: left;
+		color: white;
+		font-size: 18px;
+		padding-left: 150px;
+		padding-top: 10px;
+	}
+
+		.logo1 {
+			padding-top: 13.3px;
+			float: left;
+			padding-left: 150px;
+		}
+			.logo2 {
+				padding-top: 24px;
+				float: right;
+				padding-right: 150px;
+		}
+
+.header_content {
+	height: 117px;
+	width: 1280px;
+	background: whitesmoke;
+}
+		.header_contact {
+			padding-top: 10px;
+			color: green;
+			font-size: 18px;
+			padding-left: 330px;	
+			line-height: 20px;
+
 }
 
-.button1 {
-	width: 136px;
-	height: 37px;
-	background-color: orange;
-	border-radius: 7px;
-	font-family: ArialMT;
-	font-size: 16px;
-	color: #ffffff;
-	box-shadow: 0px 2px 0px;
-}
 
-.button2 {
-	width: 136px;
-	height: 37px;
-	background-color: orange;
-	border-radius: 7px;
+				.button_one,.button_two {
+					background:#febb11;
+					width: 136px;
+					height: 37px;
+					border-radius: 7px;
+					font-family: Regular (400) italic;
+					font-size: 15.5px;
+					color: #ffffff;
+					float: right;
+					
+					
+									}
+					.button_one {
+						margin-right: 570px;
+						margin-top: -100px;
+									}
+					.button_two {
+						margin-right: 570px;
+						margin-left: 120px;
+						margin-top: -50px;
+					}
+					
+.menu {
+	background: #37a14c;
+	width: 1280px;
+	height: 45px;
+	text-align: center;
+	}
+		.menu li {
+			display: inline;
+			padding: 57px;
+			font-family: ArialMT;
+			font-size: 16px;
+			line-height: 2.5;
+			font-weight: 700;
+			color: #ffffff;
+		}
+
+.side {
+	text-align: left;
+}
+.article h1 {
+	text-align: right;
 	font-family: ArialMT;
-	box-shadow: 0px 2px 0px;
-	font-size: 16px;
-	color: #ffffff;;
+	font-size: 24px;
+	line-height: 1.2;
+	font-weight: 700;
+	color: #000000;
+	margin-top: -150px;
+	margin-right: 499px;
+	
+}
+.screenshot {
+	text-align: right;
+	margin-right: 225px;
+}
+.article p {
+	width: 730px;
+	height: 47px;
+	text-align: left;
+	margin-top: 17px;
+	margin-left: 320px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	line-height: 1.2;
+	font-weight: 400;
+	color: #000000;
+	text-align: justify;
 }
