--- a/css/style.css
+++ b/css/style.css
@@ -3,154 +3,351 @@
 	margin: 0;
 	border: 0;
 }
-*,*:before,*:after{
--moz-box-sizing: border-box;
--webkit-box-sizing: border-box;
-box-sizing: border-box;
-}
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
-
-nav,footer,header,aside{display: block;}
-
-html,body{
-height: 100%;
-width: 100%;
-font-size: 100%;
-line-height: 1;
-font-size: 14px;
--ms-text-size-adjust: 100%;
--moz-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
-}
-input,button,textarea{font=family:inherit;}
-
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
 ul li{list-style: none;}
-img{vertical-align: top;}
 
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+a, a:visited {text-decoration: none;}
 
-.wrapper_container {
+div {box-sizing: border-box;}
+
+body {
+	font: 16px Arial, Helvetica, sans-serif;}
+
+	h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+
+
+
+.container {
+	width: 981px;
 	margin: 0 auto;
-	width: 1280px;
 }
 
-	.header_social {
-		background-color: #37a14c;
-		width: 1280px;
-		height: 45px;
-	}
-	.header_social img {
-		float: right;
-		padding-right: 150px;
-		padding-top: 10px;
-		margin: 0px -70px;
-	}
-	.header_social span {
-		float: left;
-		color: white;
-		font-size: 18px;
-		padding-left: 150px;
-		padding-top: 10px;
-	}
-
-		.logo1 {
-			padding-top: 13.3px;
-			float: left;
-			padding-left: 150px;
-		}
-			.logo2 {
-				padding-top: 24px;
-				float: right;
-				padding-right: 150px;
-		}
-
-.header_content {
-	height: 117px;
-	width: 1280px;
-	background: whitesmoke;
-}
-		.header_contact {
-			padding-top: 10px;
-			color: green;
-			font-size: 18px;
-			padding-left: 330px;	
-			line-height: 20px;
-
-}
-
-
-				.button_one,.button_two {
-					background:#febb11;
-					width: 136px;
-					height: 37px;
-					border-radius: 7px;
-					font-family: Regular (400) italic;
-					font-size: 15.5px;
-					color: #ffffff;
-					float: right;
-					
-					
-									}
-					.button_one {
-						margin-right: 570px;
-						margin-top: -100px;
-									}
-					.button_two {
-						margin-right: 570px;
-						margin-left: 120px;
-						margin-top: -50px;
-					}
-					
-.menu {
+.green {
 	background: #37a14c;
-	width: 1280px;
-	height: 45px;
-	text-align: center;
-	}
-		.menu li {
-			display: inline;
-			padding: 57px;
-			font-family: ArialMT;
-			font-size: 16px;
-			line-height: 2.5;
-			font-weight: 700;
-			color: #ffffff;
-		}
+}
 
-.side {
-	text-align: left;
+.header-top {
+	height: 45px;
 }
-.article h1 {
-	text-align: right;
-	font-family: ArialMT;
-	font-size: 24px;
-	line-height: 1.2;
-	font-weight: 700;
-	color: #000000;
-	margin-top: -150px;
-	margin-right: 499px;
-	
-}
-.screenshot {
-	text-align: right;
-	margin-right: 225px;
-}
-.article p {
-	width: 730px;
-	height: 47px;
-	text-align: left;
-	margin-top: 17px;
-	margin-left: 320px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
+
+.header-top p {
 	line-height: 1.2;
 	font-weight: 400;
-	color: #000000;
-	text-align: justify;
+	color:#ffffff;
+	float: left;
+	padding: 12px 0 14px 0;
+	}
+.header-top a {
+	float: right;
+	padding: 8px 0 5px 0;
+	margin-right: 5px;
 }
+
+
+.header-buttom {
+	height: 116px;
+}
+
+.logo-left {
+	float: left;
+	padding-top: 14px;
+}
+
+.header-contacts {
+	display: flex;
+	flex-direction: column;
+	color: #0f680e;
+	font-size: 20px;
+	float: left;
+	padding: 14px 26px 0 12px;
+}
+
+.admin-contact {
+	display: flex;
+}
+
+.name {
+	font-size: 16px;
+	color: #0f680e;
+	font-weight: bold;
+	width: 90px;
+	margin-right: 10px;
+}
+
+.name1 {
+	color: #000000;
+	font-weight: bold;
+	font-size: 16px;
+	width: 90px;
+	margin-right: 10px;
+}
+
+.tel {
+	display: flex;
+	flex-direction: column;
+}
+.tel1 {
+	padding-bottom: 5px;
+ 	color: #0f680e;
+}
+
+.skype-images {
+	margin: 0 4px 0 12px;
+}
+
+
+.skype-link {
+	font-size: 16px;
+	color: #1200ff;
+}
+
+
+.server-button {
+	float: left;
+	padding: 7.5px 17px 0px 0px; 
+	width: 136px;
+	height: 37px;
+}
+
+.button1,
+.button2 {
+	background-color:#febb11;
+	border-radius: 5px;
+	border-top: 2px solid #f3ec19;
+	border-bottom: 2px solid #293224;
+	width: 136px;
+	padding: 10px 0;
+	text-align: center;
+	margin-top: 5px;
+}
+
+.button1:active {
+	transform: translateY(3px);
+}
+.button2:active {
+	transform: translateY(3px);
+}
+
+
+	.button1 a,
+	.button2 a {
+	color: #ffffff;
+}
+
+
+
+.logo-right {
+	float: right;
+	padding: 24px 0 0 17px;
+}
+
+
+
+
+.middle-bg {
+	background: linear-gradient( #45bc5c, #3d9b50);
+	margin-top: 7px;
+	width: 100%;
+}
+
+.wrapper {
+	display: flex;
+	justify-content: space-around;
+	width: 981px;
+	margin: 0 auto;
+	line-height: 45px;
+	
+}
+
+.menu {
+	display: flex;
+	
+}
+
+.menu li {
+	display: flex;
+	justify-content: center;
+	width: 190px;
+	height: 45px;
+	border-left: 1px solid #247634;
+	border-right: 1px solid #57e974;
+}
+
+.menu li a {
+	color: #ffffff;
+	font-weight: bold;
+}
+
+
+.container {
+	margin: 0 auto;
+	max-width: 981px;
+}
+
+.body {
+	display: flex;
+	padding: 25px 30px 40px 0;
+	float: left;
+}
+
+.item {
+	font-size: 20px;
+    line-height: 53px;
+	border-bottom: 1px solid #e7e7e7;
+}
+
+.item a {
+	color: #000000;
+}
+
+.internal-menu {
+	font-size: 16px;
+	line-height: 22px;
+	padding: 0px 0 5px 16px;
+}
+
+.internal-menu a {
+	color: #ff0000;
+}
+
+
+.content-images {
+	display: flex;
+	flex-direction: column;
+}
+
+.place {
+	padding: 10px 0px 0px 50px;
+}
+
+.title {
+	float: left;
+	font-size: 24px;
+	line-height: 85px;
+	color: #000000;
+	font-weight: bold;
+}
+
+.screenshot {
+	float: left;
+}
+
+.text {
+	font-size: 14px;
+	padding: 20px 0px 35px 0px;
+	float: left;
+	color: #000000;
+}
+
+
+.news-wrapper {
+	padding-left: 50px;
+	width: 732px;
+}
+
+.news-title {
+	font-size: 16px;
+	color: #000000;
+	padding-top: 25px;
+	padding-bottom: 21px;
+	border-top: 1px solid #e7e7e7;
+	font-weight: bold;
+}
+
+.news {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.news-item {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 19px 0 0;
+}
+
+.news-item p b {
+	font-size: 14px;
+	padding: 14px 0px 7px 8px;
+	color: #000000;
+}
+
+.news-item p {
+	font-size: 14px;
+	background: #319545;
+	color: #ffffff;
+	padding: 7px 0 12px 6px;
+}
+
+
+.bg-top {
+	width: 100%;
+	height: 96px;
+	background: rgb(254, 187, 17);
+	margin-top: 31px;
+}
+
+
+.footer-contacts {
+	display: flex;
+	flex-direction: column;
+	color: #000000;
+	align-items: center;
+	float: right;
+	font-size: 20px;
+}
+
+
+
+
+.footer-text {
+	font-size: 20px;
+	color: #ffffff;
+	float: left;
+	padding-top: 25px;
+}
+
+.footer-contact {
+	display: flex;
+	padding-top: 10px;
+	
+}
+
+.foot-name {
+	font-size: 16px;
+	margin-right: 50px;
+}
+.foot-name3 {
+	font-size: 16px;
+	margin-right: 50px;
+	padding-right: 15px;
+}
+
+
+.foot-tel1 {
+	font-size: 20px;
+	color: #000000;
+}
+.foot-tel3 {
+	font-size: 20px;
+	color: #000000;
+}
+
+
+
+.bg-buttom {
+	background: linear-gradient( #45bb5c, #3d9b50);
+}	
+
+.footer-img {
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 0 10px 0;
+}
+
+.copirate {
+	padding: 20px 0;
+	font-size: 14px;
+	font-weight: bold;
+}
+
